[package]
name = "dropbox_rs"
version = "0.1.0"
authors = ["Jonathan Fok kan <jfokkan@gmail.com>"]

[dependencies]
reqwest = "0.8.0"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5.1"
error-chain = "0.11.0"

[dev-dependencies]
uuid = { version = "0.5.1", features = ["v4"] }